--- a/frontend/src/components/Bars/SideBar.module.css
+++ b/frontend/src/components/Bars/SideBar.module.css
@@ -5,16 +5,21 @@
 }
 
 .container {
-  width: 7%;
+  width: 100px;
   height: 100vh;
   position: fixed;
   box-shadow: 1px 0 6px -5px rgba(0, 0, 0, 0.9);
-  margin-top: 50px;
+  top: 50px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   background-color: #fff;
+  z-index: 99900;
 }
 
 .wrapper {
-  height: 135px;
+  height: 13%;
   background-color: #ec9f05;
   display: flex;
   flex-direction: column;
