--- a/frontend/src/components/Home/HomePage.module.css
+++ b/frontend/src/components/Home/HomePage.module.css
@@ -3,29 +3,40 @@
   padding: 0;
   box-sizing: border-box;
 }
-/* .container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-} */
 
 .main-wrapper {
-  /* display: flex; */
-  /* flex: 1; */
+  background-attachment: fixed;
+  background-image: url("../../../public/images/Screenshot_1.png");
+  background-size: cover;
+  min-height: 100vh;
+  /* padding-left: 100px;
+  padding-top: 90px; */
 }
-
-.nav-bar {
-  width: 100%;
-}
-
-/* .side-bar,
-.filter-bar {
-  flex: 1;
-} */
 
 .main-content {
-  background-image: url("../../../public/images/Screenshot_1.png");
   width: 100%;
   height: 100vh;
-  background-size: cover;
+  padding-top: 7%;
+  padding-left: 7%;
 }
+
+.wrapper {
+  display: flex;
+  width: 100%;
+}
+
+/* .date {
+  color: #676767;
+  font-size: 20px;
+  width: 10%;
+  height: 102px;
+  margin-left: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+} */
+/* 
+.card {
+  width: 45%;
+} */
