--- a/frontend/src/components/Bars/FilterBar.module.css
+++ b/frontend/src/components/Bars/FilterBar.module.css
@@ -18,3 +18,13 @@
 .container li {
   padding: 10px;
 }
+
+@media screen and (max-width: 426px) {
+  .container {
+    left: 77px;
+  }
+
+  .container li {
+    font-size: 11px;
+  }
+}
