--- a/frontend/src/components/Registration/RegistrationPage.module.css
+++ b/frontend/src/components/Registration/RegistrationPage.module.css
@@ -7,7 +7,10 @@
 .container {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
+  align-items: center;
+  width: 100%;
+  background-color: #f0f2f5;
+  min-height: 100vh;
 }
 
 .wrapper {
