--- a/frontend/src/components/Home/HomePage.module.css
+++ b/frontend/src/components/Home/HomePage.module.css
@@ -25,18 +25,23 @@
   width: 100%;
 }
 
-/* .date {
-  color: #676767;
-  font-size: 20px;
-  width: 10%;
-  height: 102px;
-  margin-left: 80px;
+.spinner {
   display: flex;
-  justify-content: center;
   align-items: center;
-  font-weight: bold;
-} */
-/* 
-.card {
-  width: 45%;
-} */
+  justify-content: center;
+}
+
+.main-content {
+  box-sizing: border-box;
+  padding: 0 10px;
+  position: fixed;
+  top: 90px;
+  left: 100px;
+  width: 94%;
+  height: 90vh;
+  overflow-x: scroll;
+}
+
+.main-content::-webkit-scrollbar {
+  display: none; /* Sakrivamo scrollbar samo za Chrome i Safari */
+}
