--- a/frontend/src/components/Home/Grades/GradeDetails.module.css
+++ b/frontend/src/components/Home/Grades/GradeDetails.module.css
@@ -79,7 +79,7 @@
 
 .items-header {
   align-items: center;
-  border-bottom: 2 px solid #f5f5f5;
+  border-bottom: 2px solid #f5f5f5ab;
   color: #3e3e3e;
   display: flex;
   font-weight: 700;
@@ -101,7 +101,11 @@
   background-color: rgb(227, 225, 225);
 }
 
-.grade-value .grade-category .grade-date {
+.part-item .grade-value {
+  flex: 1 0 0;
+  min-height: 10px;
+}
+.part-item .grade-category {
   flex: 1 0 0;
   min-height: 10px;
 }
