--- a/frontend/src/components/Bars/Navbar.module.css
+++ b/frontend/src/components/Bars/Navbar.module.css
@@ -28,9 +28,10 @@
   font-size: 30px;
 }
 
-span {
+.name {
   margin: 10px 10px 10px 10px;
   font-weight: 600;
+  padding: 5px;
 }
 
 .top-navigation-list {
@@ -57,10 +58,6 @@ span {
   justify-content: center;
   align-items: center;
   padding: 0 12px 0px 8px;
-}
-
-span {
-  padding-right: 5px;
 }
 
 .active {
